@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform {
  -String designation
}

class Organization {
  -String name
  -String NIF
}

class Collaborator {
  -String name
  -String email
}


class User {
  -String email
  -String password
}

class Freelancer {
  -String id
  -String name
  -String expertiseLevel
  -String email
  -String NIF
  -String IBAN
  -String address
  -String country
  }

class Task {
 -String id
 -String briefDescription
 -Integer timeDuration
 -Double costPerHour
 -String taskCategory
}

class PaymentTransaction{
  -String id
  -Date endDate
  -Integer delay
  -String workQualityDescription
  -Double payAmount
}

Platform "1" -- "*" Organization : has registered >
Platform "1" -- "*" Freelancer : has/uses >
Organization "1" -- "1" Collaborator: has >
Organization "1" -- "*" Task: has >
Organization "1" -- "*" PaymentTransaction: has >
Collaborator "0..1" -- "1" User: acts like >
Collaborator "1" -- "*" Freelancer: create >
Collaborator "1" -- "*" Task: create >
Collaborator "1" -- "*" PaymentTransaction: create >
PaymentTransaction "1" -- "1" Freelancer: relates to >
PaymentTransaction "1" -- "1" Task: relates to >
Task "1..*" -- "1" Freelancer: is assigned to >

@enduml